syntax = "proto3";

option go_package = "./;config_service";

import "google/protobuf/empty.proto";

service ConfigService {
    rpc Load (google.protobuf.Empty) returns (LoadResponse) {}
    rpc Set (SetRequest) returns (google.protobuf.Empty) {}
}

message LoadResponse {
    string mnemonic = 1;
	int64 walletMaxNumber = 2;
	int64 expireTime = 3;
	int64 expireDelay = 4;
	map<string, float> collectThresholds = 5;
}

message SetRequest {
    optional string mnemonic = 1;
    optional int64 walletMaxNumber = 2;
	optional int64 expireTime = 3;
	optional int64 expireDelay = 4;
	map<string, float> collectThresholds = 5;
}